--- a/provisioning/setup.yml
+++ b/provisioning/setup.yml
@@ -3,7 +3,7 @@
 #
 
 ---
-- hosts: all
+- hosts: vagrant
   user: vagrant
   sudo: yes
 
@@ -15,8 +15,11 @@
     ##
     # House keeping
     #
-    - name: General | update cache
+    - name: General | Update cache
       apt: update-cache=yes
+
+    - name: General | Upgrade
+      apt: upgrade=yes
 
     ##
     # Apt package installation of required software.
@@ -26,12 +29,18 @@
       tags: common
       with_items:
         - build-essential
-        - php5
-        - php5-dev
+        - libpcre3-dev
+        - curl
         - apache2
         - mysql-server
         - mysql-client
+        - sqlite
+        - php5
+        - php5-curl
+        - php5-dev
+        - php5-suhosin
         - php5-mysqlnd
+        - php5-sqlite
         - php5-xmlrpc
         - php-soap
         - php5-gd
@@ -67,18 +76,6 @@
     #
     - name: Apache | Enable some required modules
       action: command a2enmod rewrite vhost_alias
-      tags: common
-
-    - name: Apache | Configuration file for our site
-      action: template src=templates/etc-apache2-sites-available-devserver.j2 dest=/etc/apache2/sites-available/devserver
-      tags: common
-
-    - name: Apache | Disable the default site
-      action: command a2dissite default
-      tags: common
-
-    - name: Apache | Enable our new site
-      action: command a2ensite devserver
       tags: common
 
     ##
@@ -117,6 +114,7 @@
     - name: Redis | Install redis
       apt: pkg=redis-server state=installed
       tags: redis
+      notify: Notify it's up!
 
   ##
   # Include handlers
