edit handler related parts

--- a/provisioning/common-tasks/pecl.yml
+++ b/provisioning/common-tasks/pecl.yml
@@ -12,16 +12,16 @@
   template: src=templates/etc-php5-conf-d-apc-ini.j2 dest=/etc/php5/conf.d/apc.ini
   tags: common
   notify:
-  - restart apache
+  - Restart apache
 
 - name: xdebug | Install via pecl
-  shell: pecl install xdebug creates=/etc/php5/conf.d/xdebug.ini 
+  shell: pecl install xdebug creates=/etc/php5/conf.d/xdebug.ini
 
 - name: xdebug | Debugging configuration file, xdebug.ini
   template: src=templates/etc-php5-conf-d-xdebug-ini.j2 dest=/etc/php5/conf.d/xdebug.ini
   tags: debug
   notify:
-  - restart apache
+  - Restart apache
 
 - name: xhprof | Install via pecl
   shell: pecl install -f xhprof creates=/etc/php5/conf.d/xhprof.ini
@@ -31,4 +31,4 @@
   template: src=templates/etc-php5-conf-d-xhprof-ini.j2 dest=/etc/php5/conf.d/xhprof.ini
   tags: debug
   notify:
-  - restart apache
+  - Restart apache
