--- a/provisioning/handlers.yml
+++ b/provisioning/handlers.yml
@@ -2,10 +2,10 @@
 # handlers.yml
 
 - name: Restart apache
-  action: service name=apache2 state=restarted
+  service: name=apache2 state=restarted
 
 - name: Restart MySQL
-  action: service name=mysql state=restarted
+  service: name=mysql state=restarted
 
-- name: Notify it's up!
-  command: /Application/terminal-notifier.app/Contents/MacOS/terminal-notifier -message 'Ansible finished provisionning. Time to vagrant ssh!'
+- name: Restart Redis
+  service: name=redis state=restarted
