--- a/provisioning/common-tasks/ubuntu-drush.yml
+++ b/provisioning/common-tasks/ubuntu-drush.yml
@@ -10,6 +10,7 @@
 
 - name: Drush | Update PEAR
   command: pear upgrade-all
+  ignore_errors: yes
   tags: drush
 
 - name: Drush | Setup PEAR channel
